@@ -8,6 +8,9 @@ PHP                                                                        NEWS
   . Fixed bug GH-16577 (EG(strtod_state).freelist leaks with opcache.preload).
     (nielsdos)
 
+- DOM:
+  . Fixed bug GH-16594 (Assertion failure in DOM -> before). (nielsdos)
+
 - GD:
   . Fixed bug GH-16559 (UBSan abort in ext/gd/libgd/gd_interpolation.c:1007).
     (nielsdos)
